Mobile Adjustments & Visual improvements
Updated Nav Header to look more compact on mobile.
Fixed home featurette to look more pleasant on mobile.
Added HackSoc logo in header.

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -159,3 +159,15 @@ img[align=left] {
 img[align=right] {
   margin-left: 3%;
 }
+
+@media (max-width: 600px) {
+  .mobile-hidden {
+    display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  p {
+    margin-bottom: 0;
+  }
+}
