--- a/_sass/includes/_header.scss
+++ b/_sass/includes/_header.scss
@@ -44,11 +44,13 @@
 
     @media (max-width: 1100px) {
       ul {
-        display: inline-block;
-        float: left;
-        padding-top: $padding-small;
-        text-align: left;
-        width: 100%;
+
+      }
+    }
+
+    @media (max-width: 600px) {
+      .site-nav ul {
+        float: right;
       }
     }
   }
