--- a/_sass/includes/_header.scss
+++ b/_sass/includes/_header.scss
@@ -11,7 +11,6 @@
   }
 
   .avatar {
-    // height: 2em;
     border-radius: .2em;
     float: left;
     margin-right: 1em;
@@ -40,11 +39,9 @@
       display: inline;
       float: left;
       margin-right: .4em;
-    }
 
-    @media (max-width: 1100px) {
-      ul {
-
+      .page-link {
+        margin-right: 0.6em;
       }
     }
 
