Made CSS for `code` more obvious to users
Code is now put on a grey background to make it more obvious that we're
looking at a code segment - partly also because the monospace font we're
using is very similar to our normal one.

We also make the `line-height` a bit bigger so that we don't get
under/overlap between lines of code.

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -171,3 +171,9 @@ img[align=right] {
     margin-bottom: 0;
   }
 }
+
+code, kbd, pre, samp {
+	background-color: #E8E8E8;
+	padding: 3px;
+	line-height: 1.3em;
+}
