--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
 
 
 <!-- Disqus -->
-{% if site.theme.disqus_shortname %}
+{% if site.theme_specific.disqus_shortname %}
 <div class="comments">
   {% include disqus.html %}
 </div>
