Fixed relative paths

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<script src="{{ "js/main.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
 
 {% if site.theme_specific.footer_text %}
 <footer class="site-footer">
