--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-Frame-Options" content="sameorigin">
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
 	<!--Favicon-->
 	<link rel="shortcut icon" href="{{ "favicon.ico" | prepend: site.baseurl }}" type="image/x-icon">
