Fixed more relative imports

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 		</a>
 		{% elsif site.theme_specific.avatar %}
 		<a href="{{ site.baseurl }}">
-			<img class="avatar" src="{{ site.baseurl }}img/{{ site.theme_specific.avatar }}" alt=""/>
+			<img class="avatar" src="{{ site.baseurl }}/img/{{ site.theme_specific.avatar }}" alt=""/>
 		</a>
 		{% endif %}
 	</div>
