--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <header class="site-header">
     <div class="branding">
         {% if site.theme_specific.gravatar %}
-        <a href="{{ site.baseurl }}">
+        <a href="{{ site.url }}">
             <img class="avatar" src="https://secure.gravatar.com/avatar/{{ site.theme_specific.gravatar }}?s=100" alt=""/>
         </a>
         {% elsif site.theme_specific.avatar %}
-        <a href="{{ site.baseurl }}">
+        <a href="{{ site.url }}">
             <img class="avatar" src="{{ site.baseurl }}/img/{{ site.theme_specific.avatar }}" alt=""/>
         </a>
         {% endif %}
