Fixed Return Home post button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
   <section class="post-content">{{ content }}</section>
 
   <center>
-    <a class="button" href="{{ site.baseurl }}">Return Home</a>
+    <a class="button" href="{{ site.url }}">Return Home</a>
   </center>
 </article>
 
