Update Desktop Container
Make Fullheight
Add background image with overlay

--- a/src/components/Containers/DesktopContainer.less
+++ b/src/components/Containers/DesktopContainer.less
@@ -1,4 +1,10 @@
 .segment {
-  min-height: 700px;
+  bottom: 0;
   padding: 1em 0em;
+  background-position: center !important;
+  background-repeat: no-repeat;
+}
+
+.noBorder {
+  border: none !important;
 }
