Update Mobile Container
Fixed children
Added navigation
Add dynamic background

--- a/src/components/Containers/MobileContainer.less
+++ b/src/components/Containers/MobileContainer.less
@@ -6,4 +6,7 @@
 .segment {
   min-height: 350px;
   padding: 1em 0em;
+  background-position: center !important;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
