Update Mobile Container
Made background image size cover

--- a/src/components/Containers/MobileContainer.less
+++ b/src/components/Containers/MobileContainer.less
@@ -8,5 +8,5 @@
   padding: 1em 0em;
   background-position: center !important;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover !important;
 }
