--- a/src/components/pages/EventsPage/EventsPageEvent.less
+++ b/src/components/pages/EventsPage/EventsPageEvent.less
@@ -1,3 +1,29 @@
 .container {
   padding-bottom: 5em;
+  font-size: 16px;
+}
+
+.title {
+  font-size: 36px;
+}
+
+.date {
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+.location {
+  font-weight: bold;
+}
+
+.locationMapLink {
+  font-weight: normal;
+}
+
+.summary {
+  margin-bottom: 1em;
+}
+
+.link {
+  margin-top: 14px;
 }
