--- a/src/components/pages/EventPage/EventPage.less
+++ b/src/components/pages/EventPage/EventPage.less
@@ -11,3 +11,33 @@
   margin-bottom: 0 !important;
   margin-top: 3em !important;
 }
+
+.container {
+  padding: 1em 0;
+  font-size: 16px;
+}
+
+.title {
+  font-size: 36px;
+}
+
+.date {
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+.location {
+  font-weight: bold;
+}
+
+.locationMapLink {
+  font-weight: normal;
+}
+
+.summary {
+  margin-bottom: 1em;
+}
+
+.link {
+  margin-top: 14px;
+}
