--- a/src/components/Containers/DesktopContainer.less
+++ b/src/components/Containers/DesktopContainer.less
@@ -1,6 +1,8 @@
 .container {
   min-height: 100vh;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .segment {
