--- a/src/components/Containers/DesktopContainer.less
+++ b/src/components/Containers/DesktopContainer.less
@@ -1,3 +1,10 @@
+.container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .segment {
   bottom: 0;
   padding: 1em 0em;
