--- a/src/components/Containers/MobileContainer.less
+++ b/src/components/Containers/MobileContainer.less
@@ -1,3 +1,10 @@
+.container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .sidebarPusher {
   min-height: 100vh;
   padding: 0em 0em;
