Migrate Container Files

--- a/src/assets/less/container.less
+++ b/src/assets/less/container.less
@@ -5,15 +5,22 @@
   justify-content: space-between;
 }
 
-.sidebarPusher {
-  min-height: 100vh;
-  padding: 0em 0em;
+.desktopSegment {
+  bottom: 0;
+  padding: 1em 0em;
+  background-position: center !important;
+  background-repeat: no-repeat;
 }
 
-.segment {
+.mobileSegment {
   min-height: 350px;
   padding: 1em 0em;
   background-position: center !important;
   background-repeat: no-repeat;
   background-size: cover !important;
+}
+
+.sidebarPusher {
+  min-height: 100vh;
+  padding: 0em 0em;
 }
