--- a/src/assets/less/headers.less
+++ b/src/assets/less/headers.less
@@ -24,6 +24,13 @@
   margin-top: 1.5em !important;
 }
 
+.desktopHeader3 {
+  font-size: 3em !important;
+  font-weight: normal !important;
+  margin-bottom: 0 !important;
+  margin-top: 3em !important;
+}
+
 .logo {
   width: 150px !important;
 }
