update copyright info

--- a/themes/soctor-who-theme/layouts/partials/footer.html
+++ b/themes/soctor-who-theme/layouts/partials/footer.html
@@ -6,5 +6,5 @@
 	{{ end }}
 	{{end}}
 	</section>
-	<span>&copy; {{ now.Year }} <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></span>
+	<span>Copyright &copy; {{ now.Year }} <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></span>
 </footer>
