--- a/themes/soctor-who-theme/layouts/index.html
+++ b/themes/soctor-who-theme/layouts/index.html
@@ -16,7 +16,7 @@
 					{{ end }}
 				{{ end }}
 
-				<h2>Blog</h2>
+				<h2>Newsletters</h2>
 				{{ $paginator := .Paginate (where .Site.RegularPages "Type" "posts") }}
 				{{ range $paginator.Pages }}
 					{{ .Render "summary" }}
