--- a/themes/soctor-who-theme/layouts/_default/list.html
+++ b/themes/soctor-who-theme/layouts/_default/list.html
@@ -7,9 +7,8 @@
 		</div>
 		{{ end }}
 
-		{{ range .Paginator.Pages }}
+		{{ range .Pages }}
 			{{ .Render "summary" }}
 		{{ end }}
-		{{ partial "pagination.html" . }}
 	</main>
 {{ end }}
