--- a/themes/soctor-who-theme/layouts/partials/header.html
+++ b/themes/soctor-who-theme/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header>
 	<div class="title">
 		<a href="{{ .Site.BaseURL }}"><img src="{{ .Site.Params.LogoPath }}" height="100px" alt="{{ .Site.Title }}"></a>
-		<h1>HackSoc Nottingham</h1>
+		<h1><a href="{{ .Site.BaseURL }}">HackSoc Nottingham</a></h1>
 	</div>
 	<nav>
 		<a id="join" href="{{ .Site.Params.JoinURL }}">Join Us!</a>
