--- a/themes/soctor-who-theme/layouts/partials/calendar.html
+++ b/themes/soctor-who-theme/layouts/partials/calendar.html
@@ -18,4 +18,6 @@
     <tbody id="calendar-tbody">
     </tbody>
 </table>
-<a class="middle-link" href="/events/index.ics">Events as ICS (for Outlook &c.)</a>
+<div class="middle-link">
+    <a href="/events/index.ics">Events as ICS (for Outlook &c.)</a>
+</div>
