--- a/themes/soctor-who-theme/static/css/style.css
+++ b/themes/soctor-who-theme/static/css/style.css
@@ -181,10 +181,13 @@ p {
     display: block;
     text-align: center;
     padding-bottom: 2em;
+}
+
+.middle-link a {
     color: #aaa;
 }
 
 h1 a {
     color: #00953b;
-    text-decoration: none;;
+    text-decoration: none;
 }
