--- a/themes/soctor-who-theme/static/css/desktop.css
+++ b/themes/soctor-who-theme/static/css/desktop.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 768px) {
 
 header {
-    width: 850px;
+    width: min(850px, 90%);
     margin-top: 40px;
     margin-left: auto;
     margin-right: auto;
