mobile style tweaks

--- a/themes/soctor-who-theme/static/css/mobile.css
+++ b/themes/soctor-who-theme/static/css/mobile.css
@@ -69,6 +69,11 @@ div#split div {
     padding-bottom: 0;
 }
 
+div.right {
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
 div#split div *:last-child {
     margin-bottom: 0;
 }
