--- a/themes/soctor-who-theme/layouts/index.html
+++ b/themes/soctor-who-theme/layouts/index.html
@@ -7,21 +7,25 @@
 				{{ readFile "info/about.md" | markdownify}}
 			</div>
 			<div class="right">
-				<h2>Upcoming Events</h2>
-				{{ range where .Pages.ByDate "Section" "events" }}
-					{{ range .Pages.ByDate }}
-					{{ if ge .Date.Unix now.Unix }}
-					{{ .Render "event-summary" }}
+				<div>
+					<h2>Upcoming Events</h2>
+					{{ range where .Pages.ByDate "Section" "events" }}
+						{{ range .Pages.ByDate }}
+						{{ if ge .Date.Unix now.Unix }}
+						{{ .Render "event-summary" }}
+						{{ end }}
+						{{ end }}
 					{{ end }}
-					{{ end }}
-				{{ end }}
+				</div>
 
-				<h2><a href="/newsletters">Newsletters</a></h2>
-				{{ $paginator := .Paginate (where .Site.RegularPages "Type" "newsletters") }}
-				{{ range $paginator.Pages }}
-					{{ .Render "summary" }}
-				{{ end }}
-				{{ partial "pagination.html" . }}
+				<div>
+					<h2><a href="/newsletters">Newsletters</a></h2>
+					{{ $paginator := .Paginate (where .Site.RegularPages "Type" "newsletters") }}
+					{{ range $paginator.Pages }}
+						{{ .Render "summary" }}
+					{{ end }}
+					{{ partial "pagination.html" . }}
+				</div>
 			</div>
 		</div>
 		<div>
