--- a/themes/soctor-who-theme/static/css/style.css
+++ b/themes/soctor-who-theme/static/css/style.css
@@ -191,3 +191,12 @@ h1 a {
     color: #00953b;
     text-decoration: none;
 }
+
+div h2 {
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
+
+div h3 {
+    margin-bottom: 5px;
+}
