--- a/themes/soctor-who-theme/layouts/_default/single.html
+++ b/themes/soctor-who-theme/layouts/_default/single.html
@@ -3,7 +3,7 @@
 		<article>
 			<h1>{{ .Title }}</h1>
 			<h3>
-				{{ .Date.Format "Monday, January 2" }}{{ if .Params.time }}.
+				{{ .Date.Format "January 2, 2006" }}{{ if .Params.time }}.
 				{{ .Params.time }}
 				{{ end }}
 			</h3>
