--- a/themes/soctor-who-theme/static/css/style.css
+++ b/themes/soctor-who-theme/static/css/style.css
@@ -5,6 +5,7 @@
 
 h1 {
     color: #00953b;
+    font-size: 1.8em;
 }
 
 header h1 {
@@ -214,4 +215,8 @@ div h2 {
 
 div h3 {
     margin-bottom: 5px;
+}
+
+article.article-split div.article-right p {
+    margin: 0;
 }
