--- a/themes/soctor-who-theme/static/css/style.css
+++ b/themes/soctor-who-theme/static/css/style.css
@@ -220,3 +220,9 @@ div h3 {
 article.article-split div.article-right p {
     margin: 0;
 }
+
+code {
+    font-family: monospace;
+    font-weight: bold;
+    color: #00953b;
+}
