--- a/themes/soctor-who-theme/static/css/style.css
+++ b/themes/soctor-who-theme/static/css/style.css
@@ -58,11 +58,11 @@ table#calendar td.day {
     padding: 5px;
     font-size: 0.9em;
     vertical-align: top;
+    border-bottom: 1px solid #eee;
 }
 
 table#calendar div.date {
     color: black;
-    border-top: 1px solid #eee;
     font-size: 1rem;
     font-weight: bold;
     padding-left: 5px;
