--- a/layouts/index.html
+++ b/layouts/index.html
@@ -46,6 +46,9 @@
 				<p>
 					Want to change something on this website? Found a typo? Some styles look bad? Feel free to open a <a href="https://github.com/HackSocNotts/hacksocnotts.github.io/pulls">pull request</a>!
 				</p>
+				<p>
+					This site is built with <a href="https://gohugo.io">Hugo</a>, a static site generator, with a custom HackSoc theme, and is rebuilt each midnight.
+				</p>
 			</div>
 
 			<figure>
