add committee page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,6 +12,9 @@
 				<p>
 					Our members come from all different schools in the University, and we run our workshops and talks to cater to all different skill levels. So whether you've been programming your whole life, or you have never touched a computer, there'll be something for you!
 				</p>
+				<p>
+					HackSoc is run by <a href="/committee">these people</a>!
+				</p>
 			</div>
 			<figure>
 				<img src="/img/workshop.jpg">
