add committee link

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -50,5 +50,8 @@
 		<p>
 			<a href="/newsletters">All Newsletters</a>
 		</p>
+		<p>
+			<a href="/committee">Committee</a>
+		</p>
 	</div>
 </footer>
