Add Cloudflare verification (via meta tag)

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,6 +24,7 @@
 
 	<link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
 	<link rel="stylesheet" href="{{ "css/mobile.css" | relURL }}">
+	<meta name="cf-2fa-verify" content="g#YS8.zkliwIF,52AMh}">
 </head>
 <body onload="loadCalendar()">
 	<div class="wrapper">
