--- a/layouts/committee/committee.html
+++ b/layouts/committee/committee.html
@@ -6,7 +6,7 @@
         <div class="committee-photos">
         {{ range .Site.Data.committee.members }}
             <div class="committee-member">
-                <img src="{{ .image }}" alt="" style="aspect-ratio: 1;">
+                <img src="{{ .image }}" alt="" style="aspect-ratio: 1; object-fit: cover;">
                 <h2 class="name">{{ .name }}</h2>
                 <h3 class="role">{{ .title }}</h3>
                 <ul class="socials">
