Add committee page to main header

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header>
 	<a href="{{ .Site.BaseURL }}">
-		<img src="/img/logo.svg" height="125px" alt="HackSoc">
+		<img src="/img/logo.svg" height="150px" alt="HackSoc">
 	</a>
 	<div class="divider"></div>
 	<nav>
@@ -8,6 +8,7 @@
 			<li><a href="https://www.su.nottingham.ac.uk/societies/society/hack/" class="large">JOIN US!</a></li>
 			<li><a href="/calendar">Calendar</a></li>
 			<li><a href="https://hacknotts.com/">HackNotts</a></li>
+			<li><a href="/committee">Committee</a></li>
 			<li><a href="/contact">Contact Us</a></li>
 		</ul>
 	</nav>
