--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,7 +24,7 @@
 
 	<link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
 	<link rel="stylesheet" href="{{ "css/mobile.css" | relURL }}">
-	<meta name="cf-2fa-verify" content="g#YS8.zkliwIF,52AMh}">
+	<meta name="cf-2fa-verify" content="4d804eec7c1a905">
 </head>
 <body onload="loadCalendar()">
 	<div class="wrapper">
