Revert "Add some text so Pages rebuilds"
This reverts commit 0583815a6ea206a3d86c9e36f3230b2b2926aec0.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -50,7 +50,7 @@
 					Want to change something on this website? Found a typo? Some styles look bad? Feel free to open a <a href="https://github.com/HackSocNotts/hacksocnotts.github.io/pulls">pull request</a>!
 				</p>
 				<p>
-					This site is built with <a href="https://gohugo.io">Hugo</a>, a static site generator, with a custom HackSoc theme, and is rebuilt each midnight. Pushing this useless text so that GH Pages rebuilds :3
+					This site is built with <a href="https://gohugo.io">Hugo</a>, a static site generator, with a custom HackSoc theme, and is rebuilt each midnight.
 				</p>
 			</div>
 
