--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,8 +17,8 @@
 				</p>
 			</div>
 			<figure>
-				<img src="/img/workshop.jpg">
-				<figcaption>A HackSoc workshop with Intel, in CompSci A07.</figcaption>
+				<img src="/img/computerphile.jpg">
+				<figcaption>A live computerphile filming, featuring HackSoc members.</figcaption>
 			</figure>
 		</div>
 		
@@ -34,8 +34,8 @@
 				</p>
 			</div>
 			<figure>
-				<img src="/img/bbq.jpg">
-				<figcaption>Our end-of-term barbecue, June 2022.</figcaption>
+				<img src="/img/organisers.jpeg">
+				<figcaption>Our organisers & volunteers from HackNotts '24.</figcaption>
 			</figure>
 		</div>
 
@@ -55,8 +55,8 @@
 			</div>
 
 			<figure>
-				<img src="/img/hacknotts.jpeg">
-				<figcaption>The entrance of HackNotts 21, our annual hackathon.</figcaption>
+				<img src="/img/workshop.jpeg">
+				<figcaption>Haskell wizardry ;)</figcaption>
 			</figure>
 		</div>
 	</main>
