--- a/layouts/committee/committee.html
+++ b/layouts/committee/committee.html
@@ -6,7 +6,13 @@
         <div class="committee-photos">
         {{ range .Site.Data.committee.members }}
             <div class="committee-member">
-                <img src="{{ .image }}" alt="" style="aspect-ratio: 1; object-fit: cover;">
+                <img src="{{ .image }}" 
+                     alt="" 
+                     style="aspect-ratio: 1; object-fit: cover;"
+                     {{ with .image_alt }}
+                     onmouseover="this.dataset.src=this.src;this.src='{{ . }}';"
+                     onmouseout="if(this.dataset.src){this.src=this.dataset.src;}"
+                     {{ end }}>
                 <h2 class="name">{{ .name }}</h2>
                 <h3 class="role">{{ .title }}</h3>
                 <ul class="socials">
