Update "join us" link

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,7 +5,7 @@
 	<div class="divider"></div>
 	<nav>
 		<ul>
-			<li><a href="https://www.su.nottingham.ac.uk/societies/society/hack/" class="large">JOIN US!</a></li>
+			<li><a href="https://su.nottingham.ac.uk/societies/society/hack/" class="large">JOIN US!</a></li>
 			<li><a href="/calendar">Calendar</a></li>
 			<li><a href="https://hacknotts.com/">HackNotts</a></li>
 			<li><a href="/committee">Committee</a></li>
