--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -26,7 +26,7 @@
 			<a href="https://hacksoc.net/discord">Discord</a>
 		</p>
 		<p>
-			<a href="https://www.su.nottingham.ac.uk/societies/society/hack/">UoN SU Page</a>
+			<a href="https://su.nottingham.ac.uk/societies/society/hack/">UoN SU Page</a>
 		</p>
 		<p>
 			<a href="https://hacknotts.com">HackNotts</a>
