updated main page image

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -55,8 +55,8 @@
 			</div>
 
 			<figure>
-				<img src="/img/workshop.jpeg">
-				<figcaption>Haskell wizardry ;)</figcaption>
+				<img src="/img/karaoke.jpg">
+				<figcaption>Karaoke at HackNotts '25 :)</figcaption>
 			</figure>
 		</div>
 	</main>
