updated code of conduct footer link

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -17,7 +17,7 @@
 			<a href="https://github.com/hackSocNotts/">Our GitHub</a>
 		</p>
 		<p>
-			<a href="https://github.com/HackSocNotts/code-of-conduct">Code of Conduct</a>
+			<a href="https://hacksocnotts.co.uk/code-of-conduct/">Code of Conduct</a>
 		</p>
 		<p>
 			<a href="https://github.com/HackSocNotts/constitution/releases">Constitution</a>
