Add link to committee archive in footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -51,7 +51,8 @@
 			<a href="/newsletters">All Newsletters</a>
 		</p>
 		<p>
-			<a href="/committee">Committee</a>
+			<a href="/committee">Committee</a> +
+			<a href="https://hacksocnotts.co.uk/committee-archive/">Archive</a>
 		</p>
 	</div>
 </footer>
