--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -52,7 +52,7 @@
 		</p>
 		<p>
 			<a href="/committee">Committee</a> +
-			<a href="https://hacksocnotts.co.uk/committee-archive/">Archive</a>
+			<a href="https://hacksocnotts.co.uk/committee-archive/">Past</a>
 		</p>
 	</div>
 </footer>
