--- a/layouts/index.html
+++ b/layouts/index.html
@@ -43,7 +43,7 @@
 			<h1 id="news-and-more">News & more</h1>
 			<div>
 				<p>
-					We have occassionally been known to publish newsletters letting you know what is going on with the society. These are our most recent ones:
+					We have occasionally been known to publish newsletters letting you know what is going on with the society. These are our most recent ones:
 				</p>
 				{{ partial "newsletters.html" . }}
 				<p>
